trying to fix siema on mobile 8

--- a/src/components/section-categories/categories-styles/category.css
+++ b/src/components/section-categories/categories-styles/category.css
@@ -6,6 +6,8 @@
 
 .category-list {
   padding-bottom: 54px;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
 }
 
 .category-list:first-of-type {
